# fastAPI-bookshop-DDD-template

./: .pre-commit-config.yaml  README.md  conftest.py  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
api/api/: app_factory.py  root.py
api/api/books/: exception_handlers.py  router.py  schema.py
api/tests/: conftest.py
api/tests/books/: conftest.py  steps.py  test_book.py  test_books_create.py
app/api/books/: router.py
app/app/: root.py
app/app/books/: router.py  schema.py
app/tests/: conftest.py
app/tests/books/: conftest.py  steps.py  test_books_create.py
backend/: ioc_container.py
backend/books/: __init__.py  domain.py  ioc_containers.py  service.py
backend/books/src/application/: book_service.py
backend/books/src/domain/: book.py  exceptions.py  validation_patterns.py
backend/books/src/infrastructure/: book_repository.py  exceptions.py
backend/books/tests/: conftest.py  test_book.py
backend/common/: __init__.py  db_tabels.py  domain.py  exceptions.py  logger_config.py  postgres.py  postgres_test.py
