[project]
name = "fastapi-bookshop"
version = "0.1.0"
description = ""
authors = [
    {name = "veNNNx"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "dependency-injector (>=4.48.1,<5.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "attrs (>=25.3.0,<26.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "databases (>=0.9.0,<0.10.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "mypy (>=1.17.1,<2.0.0)",
    "ruff (>=0.12.7,<0.13.0)"
]
packages = [
    { include = "api" },
    { include = "backend" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
